kubernetes/apps/gaia/media/prowlarr/route/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prowlarr-route
  annotations:
    external-dns-managed: "true"
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
      sectionName: wildcard-domain-https
  hostnames:
    - "prowlarr.${domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: multicluster.x-k8s.io
          kind: ServiceImport
          name: prowlarr
          port: 8080
